# estim

./: .gitmodules  CMakeLists.txt  README.md
include/: Arguments.h  Constants.h  DirProcessor.h  Functions.h  Types.h
src/: Arguments.cpp  DirProcessor.cpp  Functions.cpp  main.cpp
